fixed white space at bottom

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,11 +14,10 @@ body {
   text-align: center;
   font-family:'Merriweather', serif;
   margin: 0 auto;
-  padding: 0;
 }
 
 .section-1 {
-  margin: 0 auto;
+  margin: 0 0 5em 0;
   padding: 0 1em;
 }
 
@@ -75,6 +74,8 @@ p {
   margin: 0 auto;
   padding: 0;
   margin-bottom: 0;
+  overflow: hidden; /* Gets rid of white bar at bottom that isn't a part of
+                     body*/
 
 }
 
@@ -88,6 +89,8 @@ p {
 footer {
   border-top: 2px solid #ccc;
   background-color: #f9f9f9;
+  padding: 0 1rem;
+
 
 }
 
@@ -102,6 +105,7 @@ footer p a{
   display: block;
   text-decoration: none;
   color: #000;
+  font-weight: bolder;
 }
 
 
